--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <title>Welkom bij de Rekenmachine</title>
+  <style>
+    /* Dit zorgt dat het plaatje horizontaal gecentreerd wordt */
+    .center-image {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 100%; /* Voor responsiviteit */
+      height: auto;
+    }
+  </style>
 </head>
 <body>
+  <!-- Gecentreerd plaatje -->
+<img src="katten.png" alt="Plaatje" class="center-image" style="width: 150px; height: auto;" />
+
+
   <h1>Welkom!</h1>
   <p>Klik hieronder om de rekenmachine te openen.</p>
   <a href="calculator.html">
