--- a/calculator.html
+++ b/calculator.html
@@ -22,8 +22,8 @@
       }
 
       try {
-        <!-- const response = await fetch('https://europe-west1-sysmotcalculator.cloudfunctions.net/calculate', { -->
-		const response = await fetch('http://127.0.0.1:8080', {
+        const response = await fetch('https://europe-west1-sysmotcalculator.cloudfunctions.net/calculate', {
+		<!-- const response = await fetch('http://127.0.0.1:8080', { -->
 
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
