--- a/calculator.html
+++ b/calculator.html
@@ -2,14 +2,80 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8" />
-  <title>Reken GUI</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rekenmachine</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Roboto', sans-serif;
+      background: linear-gradient(135deg, #89f7fe, #66a6ff);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .calculator {
+      background-color: #ffffff;
+      padding: 2rem;
+      border-radius: 20px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+      text-align: center;
+      width: 300px;
+    }
+
+    h2 {
+      margin-bottom: 1.5rem;
+      color: #4A90E2;
+    }
+
+    input[type="number"] {
+      width: calc(100% - 20px);
+      padding: 0.8rem;
+      margin-bottom: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      font-size: 1rem;
+    }
+
+    button {
+      width: 100%;
+      padding: 1rem;
+      background-color: #4A90E2;
+      color: #ffffff;
+      border: none;
+      border-radius: 50px;
+      font-size: 1.1rem;
+      cursor: pointer;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+
+    button:hover {
+      background-color: #357ABD;
+      transform: scale(1.05);
+    }
+
+    p {
+      margin-top: 1rem;
+      font-size: 1.1rem;
+      color: #333;
+    }
+
+    span {
+      font-weight: bold;
+      color: #4A90E2;
+    }
+  </style>
 </head>
 <body>
-  <h2>SysMot Calculator</h2>
-  <input type="number" id="inputA" placeholder="Getal A" />
-  <input type="number" id="inputB" placeholder="Getal B" />
-  <button id="calcBtn">Bereken</button>
-  <p>Resultaat: <span id="result">-</span></p>
+  <div class="calculator">
+    <h2>SysMot Rekenmachine</h2>
+    <input type="number" id="inputA" placeholder="Getal A" />
+    <input type="number" id="inputB" placeholder="Getal B" />
+    <button id="calcBtn">Bereken</button>
+    <p>Resultaat: <span id="result">-</span></p>
+  </div>
 
   <script>
     const btn = document.getElementById('calcBtn');
@@ -24,7 +90,6 @@
       try {
         const response = await fetch('https://europe-west1-sysmotcalculator.cloudfunctions.net/calculate', {
 		<!-- const response = await fetch('http://127.0.0.1:8080', { -->
-
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ a, b }),
@@ -32,9 +97,8 @@
         if (!response.ok) {
           throw new Error('Fout bij server: ' + response.status);
         }
-		const data = await response.json();
-		document.getElementById('result').textContent = `Product: ${data.product}, Som: ${data.sum}`;
-
+        const data = await response.json();
+        document.getElementById('result').textContent = `Product: ${data.product}, Som: ${data.sum}`;
       } catch (err) {
         alert('Er is een fout opgetreden: ' + err.message);
       }
